--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ psutil
 ray >= 2.5.1
 sentencepiece  # Required for LLaMA tokenizer.
 numpy
-torch >= 2.0.0
-transformers >= 4.31.0  # Required for LLaMA-2.
+torch==2.0.1 
+transformers == 4.34.0  # Required for LLaMA-2.
 xformers >= 0.0.21
 fastapi
 uvicorn
